--- a/gb/19/7/15/n11385599.md
+++ b/gb/19/7/15/n11385599.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aopp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aopp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aopp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aopp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aopp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aopp286/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aopp286/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aopp286/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>元智MIT-YZU科文英语体验营  三梯次MY Camp</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/d72b45e4754e65b5a8236b768f8f24e5-600x400.jpg" />
-<h6>元智MIT-YZU科文英语体验营的营队活动。 （元智大学提供）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2019年07月15日讯】（大纪元记者徐乃义台湾桃园报导）<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E5%85%83%E6%99%BA.md#1">元智</a>大学与美国麻省理工学院 (Massachusetts Institute of Technology，MIT) 合办的“MIT-YZU科文英语体验营”(简称MY Camp)迈入第12年，<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E5%B8%82%E6%94%BF%E5%BA%9C.md#1">桃园市政府</a>嘉惠地区学子，凡设籍桃园学子参加有全额补助，MIT的菁英学生团队与元智大学将在校内举办三梯次MY Camp，学员与来自MIT的海外实习团队交流互动，以英语学习专业知识，渡过充实的暑假。</p>
-<figure id="11385602" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/07/870e9c7dd73748ce1abf4e989cdbaafa-450x312.jpg" alt="元智MIT-YZU科文英语体验营上课状况。" width="500" /><figcaption class="wp-caption-text"><ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E5%85%83%E6%99%BA.md#1">元智</a>MIT-YZU科文英语体验营上课状况。（元智大学提供）</figcaption></figure>
+<p>【大纪元2019年07月15日讯】（大纪元记者徐乃义台湾桃园报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%83%E6%99%BA.md#1">元智</a>大学与美国麻省理工学院 (Massachusetts Institute of Technology，MIT) 合办的“MIT-YZU科文英语体验营”(简称MY Camp)迈入第12年，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E5%B8%82%E6%94%BF%E5%BA%9C.md#1">桃园市政府</a>嘉惠地区学子，凡设籍桃园学子参加有全额补助，MIT的菁英学生团队与元智大学将在校内举办三梯次MY Camp，学员与来自MIT的海外实习团队交流互动，以英语学习专业知识，渡过充实的暑假。</p>
+<figure id="11385602" aria-describedby="caption-11385602" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/07/870e9c7dd73748ce1abf4e989cdbaafa-450x312.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/07/870e9c7dd73748ce1abf4e989cdbaafa-450x312.jpg" alt="元智MIT-YZU科文英语体验营上课状况。" width="500" /></a><figcaption id="caption-11385602" class="wp-caption-text"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%83%E6%99%BA.md#1">元智</a>MIT-YZU科文英语体验营上课状况。（元智大学提供）</figcaption></figure>
 <p>元智大学曾芳美教务长表示，MY Camp藉由各项活动，带给学生们特别的国际交流经验，课程内容包括科技、管理、数学及文化交流，授课讲师均为MIT的菁英学生，精心设计活泼生动的课程，透过游戏引发学员们的学习兴趣。</p>
-<figure id="11385603" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/07/b55692b1f2724f33d041fca8361f51e9-450x298.jpg" alt="元智MIT-YZU科文英语体验营，透过游戏引发学员们的学习兴趣。" width="500" /><figcaption class="wp-caption-text">元智MIT-YZU科文英语体验营，透过游戏引发学员们的学习兴趣。（元智大学提供）</figcaption></figure>
+<figure id="11385603" aria-describedby="caption-11385603" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/07/b55692b1f2724f33d041fca8361f51e9-450x298.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/07/b55692b1f2724f33d041fca8361f51e9-450x298.jpg" alt="元智MIT-YZU科文英语体验营，透过游戏引发学员们的学习兴趣。" width="500" /></a><figcaption id="caption-11385603" class="wp-caption-text">元智MIT-YZU科文英语体验营，透过游戏引发学员们的学习兴趣。（元智大学提供）</figcaption></figure>
 <p>曾芳美说，营队期间将同学分组，各组藉由脑力激荡讨论课程主题，MIT讲师适时的加入讨论，启发同学更多学习灵感。在课程中除了透过设计思考(Design Thinking) 课程让学员观察生活中所遇到的困难或问题并动手开发实际解决方案，在机器人课程中除了介绍仿生机器人(Bio-inspired robots)学习机器人组成，藉由线上机器人模拟器(online robot stimulator)让学员亲手创造虚拟机器人。</p>
 <p>MIT讲师每天上课之前，老师们都会先和学生们聊聊天，了解学生想学的内容和程度，并依此调整上课的内容和深度，他们认为坐在教室里抄笔记学到的东西绝对不会多于动手做，而一个人可以产生的点子和想法绝对不会多于一群人的脑力激荡。老师们依据学员的想法及兴趣，弹性地调整或删减课程内容，以学生能最佳化吸收知识为最大前提，让学员们在营队短短的课程时间内，汲取更多的知识。</p>
 <p>参加营队的陈同学表示，老师藉由生活中简单可以取得的物品带领实验课程，让物理实验透过亲手体验不再有距离感。队辅适时的给予课程上的协助，可以更快的融入课程及团体，表现团队合作的精神。</p>
@@ -20,42 +19,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/8/7/10/n2186665.md#1">元智与麻省理工学院合作 推动英语体验营</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/10/7/14/n2966202.md#1">元智大学与美国MIT合作 “科技．文化．英语体验营”</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/11/5/6/n3249467.md#1">元智与美国麻省理工学院合作“科技．文化．英语体验营”</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/18/7/6/n10541354.md#1">元智MIT-YZU科文英语体验  短短时间汲取更多知识</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/1/18/n10984576.md#1">108新课纲－大手牵小手计划  元智与重点高中签约</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/4/26/n11214610.md#1">平镇义兴国小双语创新教学  结合科技智慧教育</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/17/n12038634.md#1">旅美确诊夫妻恐关2年罚两百万 桃地检署侦办</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/17/n12038632.md#1">桃园防疫及纾困并行 戒慎恐惧面对当前疫情</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/17/n12038362.md#1">抢商机“iPhone SE”限量预约回馈多</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/17/n12038321.md#1">林正峰议员要政风处将长庚新驿站工程纳稽核</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/7/10/n2186665.md#1">元智与麻省理工学院合作 推动英语体验营</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/7/14/n2966202.md#1">元智大学与美国MIT合作 “科技．文化．英语体验营”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/5/6/n3249467.md#1">元智与美国麻省理工学院合作“科技．文化．英语体验营”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/7/6/n10541354.md#1">元智MIT-YZU科文英语体验  短短时间汲取更多知识</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/18/n10984576.md#1">108新课纲－大手牵小手计划  元智与重点高中签约</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/26/n11214610.md#1">平镇义兴国小双语创新教学  结合科技智慧教育</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680101.md#1">桃园大湳森林公园打造“都市绿洲”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680175.md#1">醒吾科大携手智泰科技推动AI教育</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000789.md#1" target="_blank">共产暴政录：消灭思想先驱的“一打三反”</a></li><li><a href="https://github.com/aopp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280869.md#1" target="_blank">谴责中共活摘器官 美密苏里州通过决议案</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871086.md#1" target="_blank">绝处逢生 大陆法轮功学员谢师恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/16/n12034796.md#1">【拍案惊奇】北京开打反习势力？美媒获瞒报铁证</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12032435.md#1">不经意的照片 让菲律宾女孩从乞丐变网红</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12031072.md#1">【最新疫情4.15】川普周四公布新联邦准则</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/16/n12034935.md#1">【翻墙必看】外媒曝中共秘密电话会议内容</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12028697.md#1">木村拓哉拍戏从不带剧本 获菜菜绪等人证实</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12032770.md#1">疫情下加拿大小狗替家人带回速食餐点</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12031185.md#1">《花木兰》票房仅874美元？迪士尼：尚未上映</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12033483.md#1">赞歌手韦礼安英文好 黄子佼提谭德塞全场笑翻</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12030796.md#1">大陆影业停摆80多天 逾二千间影院注销</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/11/n12022064.md#1">归序《推背图》兑运卦象预言中共终局</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/11/n12021603.md#1">牛顿 莎士比亚 达芬奇 经历瘟疫时做了些什么</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12033701.md#1">没喝孟婆汤？ 这些古人记得前生</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/2/19/n11880841.md#1">【三国英雄14】天下归心（文字版）</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/3/25/n11972220.md#1">三和尚转生高官  身带跨世“印记”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11960837.md#1">中共声称疫情“零增长” 民众揭背后真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929076.md#1">天地清明引(234) 降天罪－琼林鏖战4</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aopp286/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aopp286/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/15/n11385599.htm">元智MIT-YZU科文英语体验营  三梯次MY Camp</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/15/n11385599.htm">元智MIT-YZU科文英语体验营  三梯次MY Camp</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aopp286/djy/blob/master/gb/19/7/15/n11385599.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aopp286/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aopp286/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aopp286/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/7/15/n11385599.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
